--- a/src/app/navbar/about-us/about-us.component.html
+++ b/src/app/navbar/about-us/about-us.component.html
@@ -1,13 +1,12 @@
 <div class="aboutUs">
   <div class="white">
     <div class="jumbotron text-center">
-      <h1>ABOUT VOYAGER.</h1>
+      <h1 class="abs">ABOUT VOYAGER</h1>
     </div>
     
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
-        <div class="navbar-header">
-        </div>
+        <div class="navbar-header"></div>
       </div>
     </nav>
     
@@ -16,40 +15,40 @@
         <div class="col-sm-4">
           <h2>ABOUT US</h2>
           <div class="img1">
-            <img class="fakeimg"style="height: 600px; width: 1000px;display: flex; margin-left: 20%;" src="http://cdn.home-designing.com/wp-content/uploads/2013/09/indian-hotel-lobby.jpg">
+            <img class="fakeimg" src="http://cdn.home-designing.com/wp-content/uploads/2013/09/indian-hotel-lobby.jpg" alt="Hotel Lobby">
           <br>
-          <p style="font-size:40px;;" class="para">We’ve been travelling the world for over 30 years, building a reputation for providing quality travel content that’s inspiring, engaging and informative. With all of our guides and features written and updated by a global network of expert travel writers that includes some of the best names in the business, we pride ourselves on producing content that stands out from the crowd. Regrettably, we aren’t able to accept guest posts and won’t be able to reply to guest post requests.</p>
+          <p class="para">We’ve been travelling the world for over 30 years, building a reputation for providing quality travel content that’s inspiring, engaging and informative. With all of our guides and features written and updated by a global network of expert travel writers that includes some of the best names in the business, we pride ourselves on producing content that stands out from the crowd. Regrettably, we aren’t able to accept guest posts and won’t be able to reply to guest post requests.</p>
         </div>
         <div class="bttns">
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#partnership" (click)="showcards1()">Partnership</button>
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#partnership">Partnership</button>
           <div id="partnership" class="collapse">
-            <p *ngIf="showcrd1" style="width: 360px;font-size:30px;" >We would like to thank all our travel partners and sponsors who have helped support our travel and writing efforts! We are very grateful for all the support we receive. If you are interested in working with us to help promote your travel business, tourism board, travel product, or travel-related service, please contact us. We consider travel reviews, press trips, social media promotion, long-term brand ambassador work, professional photography packages, and other types of partnerships. We also sometimes put together large-scale projects with multiple partners.</p>
+            <p style="font-size:30px;" >We would like to thank all our travel partners and sponsors who have helped support our travel and writing efforts! We are very grateful for all the support we receive. If you are interested in working with us to help promote your travel business, tourism board, travel product, or travel-related service, please contact us. We consider travel reviews, press trips, social media promotion, long-term brand ambassador work, professional photography packages, and other types of partnerships. We also sometimes put together large-scale projects with multiple partners.</p>
           </div>
           <br>
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#careers" (click)="showcards2()">Careers</button>
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#careers">Careers</button>
           <div id="careers" class="collapse">
-            <p *ngIf="showcrd2"  style="width: 360px;font-size:30px;">A career at Voyager is all about the journey, helping you explore new challenges in a place where you can be your best self. With plenty of exciting twists, turns and opportunities along the way. We’ve always been pioneers, on a mission to shape the future of travel through cutting edge technology, to make it easier for everyone to enjoy amazing experiences wherever they go.</p>
+            <p style="font-size:30px;">A career at Voyager is all about the journey, helping you explore new challenges in a place where you can be your best self. With plenty of exciting twists, turns and opportunities along the way. We’ve always been pioneers, on a mission to shape the future of travel through cutting edge technology, to make it easier for everyone to enjoy amazing experiences wherever they go.</p>
           </div>
           <br>
-          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#newsroom" (click)="showcards3()">Newsroom</button>
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#newsroom">Newsroom</button>
           <div id="newsroom" class="collapse">
-            <p *ngIf="showcrd3" style="width: 360px;font-size:30px;">After more than two years of restrictions, many travellers have amassed additional disposable income and want to invest it wisely. Indian hotels have reported a 187% increase in gross operating profit per available room (or GOPPAR) when comparing March 2022 with the same month in 2021, and hotel chains such as Marriott and Wyndham are expanding further in the Indian region, so it’s clear that this appetite for the ultimate in comfort and amazing experiences continues to grow in these two crucial markets. 5-star hotel bookings in the country have also seen a 5.4% increase between the second half of 2021 and the first half of 2022, jumping to almost 18% this year.</p>
+            <p style="font-size:30px;">After more than two years of restrictions, many travellers have amassed additional disposable income and want to invest it wisely. Indian hotels have reported a 187% increase in gross operating profit per available room (or GOPPAR) when comparing March 2022 with the same month in 2021, and hotel chains such as Marriott and Wyndham are expanding further in the Indian region, so it’s clear that this appetite for the ultimate in comfort and amazing experiences continues to grow in these two crucial markets. 5-star hotel bookings in the country have also seen a 5.4% increase between the second half of 2021 and the first half of 2022, jumping to almost 18% this year.</p>
           </div>
         </div>
         </div>
         <div class="col-sm-8">
           <h2>OUR INITIATIVE</h2>
           <div>
-            <img class="fakeimg"style="margin-left:27%" src="https://georgia-roadtrip.com/wp-content/uploads/2020/08/Fabrika-Hostel-and-Suites-Tbilisi.jpg">
+            <img class="fakeimg" src="https://georgia-roadtrip.com/wp-content/uploads/2020/08/Fabrika-Hostel-and-Suites-Tbilisi.jpg" alt="Fabrika Hostel">
           </div>
           <br>
-          <p style="font-size:40px;">We, as the VOYAGER. team have created a premium travel ad network to ensure brand consistency across the whole passenger journey using unique targeting criteria at key moments. Target a highly engaged and affluent audience with our unique targeting criteria: using trip, sociodemographic and travel agency profiles. To achieve this, we identify the best channels and locations that in combination with our IAB ad formats, drive efficient results and lead to brand success.</p>
+          <p class="para">We, as the VOYAGER. team have created a premium travel ad network to ensure brand consistency across the whole passenger journey using unique targeting criteria at key moments. Target a highly engaged and affluent audience with our unique targeting criteria: using trip, sociodemographic and travel agency profiles. To achieve this, we identify the best channels and locations that in combination with our IAB ad formats, drive efficient results and lead to brand success.</p>
           <br>
           <h2>MESSAGE FROM OUR TEAM</h2>
           <div>
-            <img class="fakeimg"style="margin-left:27%" src="https://wwwnc.cdc.gov/travel/images/travel-industry-air.jpg">
+            <img class="fakeimg" src="https://wwwnc.cdc.gov/travel/images/travel-industry-air.jpg" alt="Travel Industry Air">
           </div>
-          <p style="font-size:40px;">Travel as if your life depends on it. Because decades later, the happiness in your life will actually depend on reflecting on the memories that you make today. BON VOYAGE!!!</p>
+          <p class="para">Travel as if your life depends on it. Because decades later, the happiness in your life will actually depend on reflecting on the memories that you make today. BON VOYAGE!!!</p>
         </div>
       </div>
       
@@ -58,39 +57,38 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card">
-            <img src="../../../assets/WhatsApp Image 2024-05-17 at 10.42.54_52b13a5a.jpg" alt="Avatar" style="width:100%">
+            <img src="../../../assets/WhatsApp Image 2024-05-17 at 10.42.54_52b13a5a.jpg" alt="Aditya Pathak" style="width:100%">
             <div class="container">
               <h4><b>Aditya Pathak</b></h4>
-              <p>Designer</p>
-              <p>abc@example.com</p>
+              <p>Associate SoftWare Developer </p>
+              <p>pathakaaditya253@gmail.com</p>
               <button class="button-contact">Contact</button>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="../../../assets/siddharth.jpg" alt="Avatar" style="width:100%; min-height: 5%;">
+            <img src="../../../assets/siddharth.jpg" alt="Siddharth Singh" style="width:100%">
             <div class="container">
               <h4><b>Siddharth Singh</b></h4>
-              <p>Designer</p>
-              <p>abc@example.com</p>
+              <p>Associate SoftWare Developer</p>
+              <p>siddharth.singh0716@gmail.com</p>
               <button class="button-contact">Contact</button>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img src="../../../assets/WhatsApp Image 2024-05-17 at 10.44.21_30f56d84.jpg" alt="Avatar" style="width:100%">
+            <img src="../../../assets/WhatsApp Image 2024-05-17 at 10.44.21_30f56d84.jpg" alt="Manik Khurana" style="width:100%">
             <div class="container">
               <h4><b>Manik Khurana</b></h4>
-              <p>Designer</p>
-              <p>abc@example.com</p>
+              <p>Associate SoftWare Developer</p>
+              <p>khuranamanik138@gmail.com</p>
               <button class="button-contact">Contact</button>
             </div>
           </div>
         </div>
       </div>
     </div>
-    
   </div>
 </div>
